tests/paczka1/fuzzy1/35162456.err
Error in line 1: YcAjmShrZs A702 21,8
Error in line 15: i6s7zR S3 69,7
Error in line 21: YcAjmShrZs S96 27,5
Error in line 27: 1Ar8A A702 -2,0
Error in line 22: 1Ar8A A702 49,5
Error in line 28: S2DwNvq S96 81,0
